--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,20 @@
 .header {
-  padding: 20px 0;
+  background-color: #f4f4fd;
 }
-.nav {
+.menu-list {
   display: flex;
-  justify-content: space-between;
+  gap: 30px;
+  justify-content: flex-start;
 }
-.nav-logo {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
-}
-.nav-link {
-  position: relative;
-  display: block;
+.menu-link {
   font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+  padding: 25px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+.menu-title {
+  font-weight: 500;
+  padding: 25px 0;
 }
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
-}
-.nav-link.active::after {
-  background: #747bff;
+.menu-link:hover {
+  color: #404bbf;
 }
