--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,3 +1,5 @@
+/* Reset styles */
+body,
 h1,
 h2,
 h3,
@@ -21,10 +23,12 @@ ul {
 a {
   color: currentColor;
   text-decoration: none;
+  display: block;
 }
 
 button {
   cursor: pointer;
+  border: none;
 }
 
 img {
